--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
     "lucide-react": "^0.372.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2",
     "next": "14.2.1",
     "prettier": "^3.2.5",
     "react": "^18",
